# ChangeLog for app-admin/pass
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/pass/ChangeLog,v 1.26 2014/07/01 08:52:02 zx2c4 Exp $

*pass-1.6.3 (01 Jul 2014)

  01 Jul 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +pass-1.6.3.ebuild,
  -pass-1.6.2.ebuild:
  Version bump.

  29 Jun 2014; Jason A. Donenfeld <zx2c4@gentoo.org> pass-9999.ebuild:
  The latest passmenu now uses xdotool.

*pass-1.6.2 (14 May 2014)

  14 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +pass-1.6.2.ebuild,
  -pass-1.6.1-r1.ebuild:
  Version bump.

  09 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> pass-1.6.1-r1.ebuild,
  pass-9999.ebuild:
  Elisp dies anyway

  09 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> metadata.xml,
  pass-1.6.1-r1.ebuild, pass-9999.ebuild:
  Install importers behind USE flag.

  09 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +files/50pass-gentoo.el,
  pass-1.6.1-r1.ebuild, pass-9999.ebuild:
  Add initial emacs support.

  08 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> pass-1.6.1-r1.ebuild,
  pass-9999.ebuild:
  We need zsh completion.

*pass-1.6.1-r1 (08 May 2014)

  08 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +pass-1.6.1-r1.ebuild,
  -pass-1.6.1.ebuild:
  Revbump the bash comp fix.

  08 May 2014; Jason A. Donenfeld <zx2c4@gentoo.org> pass-1.6.1.ebuild,
  pass-9999.ebuild:
  Use proper bash completion eclass.

  24 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> -pass-1.4.2.ebuild,
  -pass-1.5.ebuild:
  Remove old versions.

*pass-1.6.1 (24 Apr 2014)

  24 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +pass-1.6.1.ebuild,
  -pass-1.6.ebuild:
  Version bump.

*pass-1.6 (24 Apr 2014)

  24 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +pass-1.6.ebuild,
  pass-9999.ebuild:
  Version bump

  24 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> metadata.xml,
  pass-9999.ebuild:
  Add dmenu support.

  23 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> pass-9999.ebuild: