@@ -3,24 +3,14 @@ Hash: SHA256
 
 AUX 50pass-gentoo.el 491 SHA256 1420eb48a178553d6032ee312359fc498b1469d433537c4812dca2f835e5f9e7 SHA512 eaba952f7b080bb44f1a415ee3fa1e71469177a993116b890a0788b177ec70948c1ea6923f17ddddf5f1c01af2fca03e98a71e06a5dff32ff6ebe0b73a79f659 WHIRLPOOL 2030f49e6aaab66dbb507e3b49de371723de334b44afe568392f8fef7d0e0dd43238f636bf462d863de07ec5ff8eb84fd92d3479fe6243d487c2235aa3c5c699
 DIST password-store-1.6.3.tar.xz 52944 SHA256 d419d40aa165c1f893e994dd706733374a9db8cf5314124702a061e70e0340f7 SHA512 684b779361da0b4c107141f2c21d845fb277f537305ab351dda8a0f7041ce6f9215dab54a2fdc1b8e3c06e01346e1562f800b07519cd76b364313f6f24d2f010 WHIRLPOOL 51f975e79c423eb1f67ffeedbd4b7f803b0ddf92d3d235944528edf043a1d80f42397c1bd0dcb9b25545469dded857524c884587f4b67f59d157e37a8e28ff4e
-EBUILD pass-1.6.3.ebuild 2124 SHA256 601398107876695498a7fcf5b245d4e4405da126e944f46ccbb6c964a1d59275 SHA512 b3d4a89cc6373ede3dcc4402b735bedbce44af525a8e091d70c4df9e5bf5af29e59d6882797bca1ec12d71974e885950dad66a34a843817bfee6e7bc9cfd002b WHIRLPOOL acf878b90a28d57edd502dcf8ce54bcd26ecdde296375b1c7c80ca5ce5c8b1f19b62f675d3f873b22524654104905331592cf305a3f39c5f977e7ebf5d832243
-EBUILD pass-9999.ebuild 2077 SHA256 22d3f746da035101341d7bb8ba6c5d3885c3b95e44fade20255ae9414013cf71 SHA512 0964ddfc0ac68858b056203fda3537ee07059734be6a0599cd596952d864bcf5dedbab4cc47e97c11008d550a4282527ccc9365b60e1d4e260c4c88da84c6cfc WHIRLPOOL 25d27b659a55897c50d1276d2195a1660eacd157e1e725f9a9e5fd3d5dfb0a1fa96d10c288d385c5801c6ee48c8d7d0d699667017e1260da27980f890cbd1232
-MISC ChangeLog 3510 SHA256 262a2a13be9f17a554409068687ba709852bb9668e220f89c7cb42df68470a1b SHA512 a81a31730cde2fbc8e3830d50e6342465745371140b03d34d2c6072f6134c23ccbd3f98e24d98d984a114d0f913fc29274acc90407bfbda3e93543cf674ad715 WHIRLPOOL e4285bd047573478bdc7a639d98b1dfa06337d7d64d27c0cb79a72f37acd292a9b11d8152a832079d747813e7536a80c5cf7433f626bc04f90702bd80c725ca6
+EBUILD pass-1.6.3.ebuild 2156 SHA256 aa26911a2def5e531d47886478256e62fe06cd2baab039ed758d23dd10ca5981 SHA512 3cd3fffd37b025767c7232496941b72203e1272a809bc32805d700c0698278cada9f65295d9a604d480437df092c53d176467d304c48dd23654894b98af5c022 WHIRLPOOL a6a0c93507f643f316289acf982fc73a16002a6297202fa238d8e4b75336b83c109315c2cf6ef0b8426b19d20bdb11f0abb146ab6e790ec35c3db9c50848a2f1
+EBUILD pass-9999.ebuild 2109 SHA256 3bc486dad6a75e0e24aa0d6a6f32cd85f27de1675e37d8f58532afd45a75d342 SHA512 780d7fd3059c1c820aa4e0a3686a08ad4bc25ffb1df5ec627639245d5160395b5b8d156b20826ad3c70aa5fd02fd1ed7a03a780e4098938c5e8e071d09a044f0 WHIRLPOOL 6b4688ebe5ca90d1b3fb99d5d741b901c6cef4b650455011dd9e8e97866312558ed3fe268ae9badcf24ffbaf15ecf06486a40a67218793b209121ccd9dd6a1b0
+MISC ChangeLog 3661 SHA256 2f14247b32e4f17092da6f301f0ea1c1ed32d372f06dff3fc8830ddec4a46701 SHA512 1ff4dc66dd9a7dc6402fedd05fb34674d55c01534439ddd984e7c8f174b79324171f45940de03fcd26f581c679534de50c98499c74c75f6f1b0222a7d78dbd50 WHIRLPOOL f5817d5822425059dbdea64c85916fb60c54ae950778397d979be29a3eaec12eec8f27710562c05edbe05d1a0436237b2deb2765abfac4a0a37892b07ea38976
 MISC metadata.xml 867 SHA256 dee4a7d01bcf56ddc53605ce373b9e740f409d2e81d1ffd4b8bd0058cd13cccc SHA512 71d50d2288b8b7914c907a99e0ad1dfcc68c7a15c4c52fa560b382fa8f8fa05631174a8187370b67cdc1ebb7fb090e7740779ae087413007b326b67a712b413d WHIRLPOOL 52789415a5486956ff526e8d543cc0d32eb1d9290cb225c35dc021bde8099ed11df63b8c90fb7abe7df6618e8d3a78a113f85e9999e0963c30b64a18b0f5a23a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTsnclAAoJEEn8cBKl3gOu7QUP/RDjmOyqf1//2tp3gHdDgGff
-o2WLg5I+AOP5RJPCj9PI2EVWDtVE3p7srwaPOV3wONwDX0E2wHBEF2sWCQYINNrc
-+7K/O30RvcUkfZYyO1DcsoXhhgfaE/SHe69PTg2FoGedDvQX7bbCsSNTzUufVh77
-bxi3QFp5wuUIrsYA4xHWRjm0/MMVHcWfg3PNVwbpS9HEDsgAo4Bd0CAlh+lT3/vX
-0R4H1kwlXnlbrmqQnB6OXC5SC31waD460QxZthcWzspucgRLC4t7WYP9Mj5LYFIx
-U0ROP00/lFIbqPkoO7Gn2pZn0RBtCKPCTA0tACy/6yGPX4wk+yK7yoezIKZdIU5q
-42xPdcj/Y4DmlQIATCL+EHxU7uI4xhmX5uU/ol5I+wfBTvLn2dvGrCFZyxjuWU7X
-M5LbiwU6z4YeuFuJPJpw9mOhJufajICxEydpscjCAy0AVJHmBkaWbeYmzpNUQJJO
-OhlLCFNUFUnOKWDi1uFJibEflWDEkr/h6xMobgui0u3h9uiYcvpweCc37btfOWuF
-9TOU351tAqGrhK6EDZ4lIRr0Gb8RwTyxxn2aL4wuwgHjfSKXXFGI+HVGBghRrzuA
-3qq5QjnHGecJqsXVlRFd4z6cwKmNn2MQKMidQ4BB9oHnp6GhgJnHpKp+4P3SbJGw
-MdpjHXKnLeJwBmA62yMw
-=VBhy
+iEYEAREIAAYFAlPKILkACgkQX3X2B8XHTolrEgCfUoMoAY67TNkO/I2I8ZpbJx1O
+cDMAnRg5lrvBsvoofRPBhAFd+s3PCjKo
+=Ef0d
 -----END PGP SIGNATURE-----
