@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pass/pass-9999.ebuild,v 1.17 2014/06/29 09:35:10 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pass/pass-9999.ebuild,v 1.18 2014/07/19 07:39:30 grobian Exp $
 
 EAPI=4
 
@@ -47,7 +47,7 @@ src_compile() {
 src_install() {
 	use zsh-completion && export FORCE_ZSHCOMP=1
 	use fish-completion && export FORCE_FISHCOMP=1
-	default
+	emake PREFIX="${EPREFIX}/usr" install
 	use dmenu && dobin contrib/dmenu/passmenu
 	newbashcomp src/completion/pass.bash-completion pass
 	if use emacs; then
